<?xml version="1.0" encoding="UTF-8" ?>

<resources>

  <string name="audiobook_player_play">Play</string>
  <string name="audiobook_player_pause">Pause</string>

  <string name="audiobook_part_delete_confirm">Delete this book part?</string>
  <string name="audiobook_part_delete">Delete</string>
  <string name="audiobook_part_delete_keep">Keep</string>

  <string name="audiobook_part_download_stop_confirm">Stop downloading this book part?</string>
  <string name="audiobook_part_download_stop">Stop</string>
  <string name="audiobook_part_download_continue">Continue</string>

  <string name="audiobook_player_menu_playback_rate_title">Playback Rate</string>
  <string name="audiobook_player_menu_sleep_title">Set Your Sleep Timer</string>
  <string name="audiobook_player_menu_toc_title">Table Of Contents</string>

  <string name="audiobook_player_toc_title">Table Of Contents</string>
  <string name="audiobook_player_title">Audio Book Player</string>

  <string name="audiobook_player_spine_element">%1$s (file %2$d of %3$d)</string>

  <string name="audiobook_player_sleep_end_of_chapter">End of file</string>
  <string name="audiobook_player_sleep_60">60:00</string>
  <string name="audiobook_player_sleep_45">45:00</string>
  <string name="audiobook_player_initial">00:00:00</string>
  <string name="audiobook_player_sleep_30">30:00</string>
  <string name="audiobook_player_sleep_15">15:00</string>
  <string name="audiobook_player_sleep_now">Now</string>
  <string name="audiobook_player_sleep_off">Off</string>
  <string name="audiobook_player_seek_15">15</string>

  <string name="audiobook_player_buffering">Buffering…</string>
  <string name="audiobook_player_waiting">File %1$d must be downloaded to continue playback.</string>
  <string name="audiobook_player_error">An error occurred during playback. Error code: %1$d</string>

  <string name="audiobook_player_toc_chapter_n">Chapter %1$d</string>
  <string name="audiobook_player_toc_menu_refresh_all">Refresh All</string>
  <string name="audiobook_player_toc_menu_stop_all">Stop All Downloads</string>
  <string name="audiobook_player_toc_menu_stop_all_confirm">Stop all downloads?</string>
  <string name="audiobook_player_toc_menu_stop_confirm_positive">Stop</string>
  <string name="audiobook_player_toc_menu_stop_confirm_negative">Continue</string>


  <!--
    Accessibility strings.
    -->

  <string name="audiobook_accessibility_hours">Hours</string>
  <string name="audiobook_accessibility_minutes">Minutes</string>
  <string name="audiobook_accessibility_seconds">Seconds</string>
  <string name="audiobook_accessibility_hour">Hour</string>
  <string name="audiobook_accessibility_minute">Minute</string>
  <string name="audiobook_accessibility_second">Second</string>

  <string name="audiobook_accessibility_player_buffering">Player Is Buffering</string>

  <string name="audiobook_accessibility_player_time_current">%1$s Played</string>
  <string name="audiobook_accessibility_player_time_remaining">%1$s Remaining</string>

  <string name="audiobook_accessibility_menu_sleep_timer_icon">Set Your Sleep Timer</string>
  <string name="audiobook_accessibility_menu_sleep_timer">Sleep Timer Menu</string>
  <string name="audiobook_accessibility_menu_sleep_timer_item_at_end_of_chapter">Sleep At End of File</string>
  <string name="audiobook_accessibility_menu_sleep_timer_item_in_60_minutes">Sleep In 60 Minutes</string>
  <string name="audiobook_accessibility_menu_sleep_timer_item_in_45_minutes">Sleep In 45 Minutes</string>
  <string name="audiobook_accessibility_menu_sleep_timer_item_in_30_minutes">Sleep In 30 Minutes</string>
  <string name="audiobook_accessibility_menu_sleep_timer_item_in_15_minutes">Sleep In 15 Minutes</string>
  <string name="audiobook_accessibility_menu_sleep_timer_item_off">Sleep Timer Off</string>
  <string name="audiobook_accessibility_menu_sleep_timer_item_now">Sleep Now</string>

  <string name="audiobook_accessibility_sleep_timer_description_end_of_chapter">Sleep At End of File</string>
  <string name="audiobook_accessibility_sleep_timer_description_60_minutes">Sleep In 60 Minutes</string>
  <string name="audiobook_accessibility_sleep_timer_description_45_minutes">Sleep In 45 Minutes</string>
  <string name="audiobook_accessibility_sleep_timer_description_30_minutes">Sleep In 30 Minutes</string>
  <string name="audiobook_accessibility_sleep_timer_description_15_minutes">Sleep In 15 Minutes</string>
  <string name="audiobook_accessibility_sleep_timer_description_off">Off</string>

  <string name="audiobook_accessibility_sleep_timer_currently">The Sleep Timer Is Currently Set To</string>
  <string name="audiobook_accessibility_sleep_timer_has_been_set">Sleep timer has been set to</string>
  <string name="audiobook_accessibility_sleep_timer_label">Sleep Timer</string>
  <string name="audiobook_accessibility_sleep_timer_is_paused">The Sleep Timer Is Paused Because Playback Is Paused.</string>

  <string name="audiobook_accessibility_chapter_of">%1$s (file %2$d of %3$d)</string>

  <string name="audiobook_accessibility_menu_playback_speed_icon">Set Your Playback Speed</string>
  <string name="audiobook_accessibility_menu_playback_speed_0p75">75 percent</string>
  <string name="audiobook_accessibility_menu_playback_speed_1">100 percent</string>
  <string name="audiobook_accessibility_menu_playback_speed_1p25">125 percent</string>
  <string name="audiobook_accessibility_menu_playback_speed_1p5">150 percent</string>
  <string name="audiobook_accessibility_menu_playback_speed_2">200 percent</string>

  <string name="audiobook_accessibility_playback_speed_currently">Playback Speed Is Currently Set To</string>
  <string name="audiobook_accessibility_playback_speed_set_to">Set Playback Speed To</string>
  <string name="audiobook_accessibility_playback_speed_has_been_set">Playback speed has been set to</string>
  <string name="audiobook_accessibility_playback_speed_is_selected">This Is The Currently Selected Playback Rate</string>

  <string name="audiobook_accessibility_forward_15">Fast forward 15 seconds</string>
  <string name="audiobook_accessibility_backward_15">Rewind 15 seconds</string>
  <string name="audiobook_accessibility_play">Play</string>
  <string name="audiobook_accessibility_pause">Pause</string>
  <string name="audiobook_accessibility_book_cover">Book cover</string>

  <string name="audiobook_accessibility_toc_chapter_n">Chapter %1$d</string>
  <string name="audiobook_accessibility_toc_chapter_is_current">Selected</string>
  <string name="audiobook_accessibility_toc_chapter_requires_download">File Must Be Downloaded Before It Can Be Played</string>
  <string name="audiobook_accessibility_toc_chapter_failed_download">File Has Failed To Download</string>
  <string name="audiobook_accessibility_toc_chapter_downloading">File Is Currently Downloading</string>
  <string name="audiobook_accessibility_toc_chapter_duration_is">Duration</string>

  <string name="audiobook_accessibility_toc_refresh_all">Download All Files</string>
  <string name="audiobook_accessibility_toc_stop_all">Stop All File Downloads</string>
  <string name="audiobook_accessibility_toc_download">Download File %1$d</string>
  <string name="audiobook_accessibility_toc_cancel">Cancel Download Of File %1$d</string>
  <string name="audiobook_accessibility_toc_retry">Retry Download Of File %1$d</string>
  <string name="audiobook_accessibility_toc_progress">Download Progress Of File %1$d is
    %2$d Percent. Click To Stop Download.</string>
  <string name="audiobook_accessibility_toc_selected">Selected File %1$d</string>

</resources>
