<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/player_menu_playback_rate"
    android:title="@string/audiobook_player_menu_playback_rate_title"
    android:icon="@drawable/speed"
    app:actionLayout="@layout/player_menu_playback_rate_text"
    app:showAsAction="always" />

  <item
    android:id="@+id/player_menu_sleep"
    android:title="@string/audiobook_player_menu_sleep_title"
    android:icon="@drawable/sleep_icon"
    app:actionLayout="@layout/player_menu_sleep_text"
    app:showAsAction="always" />

  <item
    android:id="@+id/player_menu_toc"
    android:title="@string/audiobook_player_menu_toc_title"
    android:icon="@drawable/list"
    app:iconTint="?attr/simplifiedColorControlActionBar"
    app:showAsAction="always" />

</menu>